@@ -21,13 +21,13 @@ import com.nhnacademy.messenger.common.util.MessageUtils;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.time.LocalDateTime;
-import java.util.Map;
+import java.util.Collections;
 
-public class LoginCommand implements ClientCommand {
+public class RoomListCommand implements ClientCommand {
 
     private final ClientUI clientUI;
 
-    public LoginCommand(ClientUI clientUI) {
+    public RoomListCommand(ClientUI clientUI) {
         this.clientUI = clientUI;
     }
 
@@ -35,24 +35,17 @@ public class LoginCommand implements ClientCommand {
     public void execute(String[] args, OutputStream out) {
         String sessionId = ClientSession.getSessionId();
 
-        if (sessionId != null) {
-            clientUI.displayMessage("이미 로그인되어 있습니다.");
+        if (sessionId == null) {
+            clientUI.displayMessage("해당 서비스를 이용하려면 로그인이 필요합니다.");
             return;
         }
-
-        if (args.length < 3) {
-            return;
-        }
-
-        String userId = args[1];
-        String password = args[2];
 
         MessageRequest request = new MessageRequest(
                 new MessageRequest.RequestHeader(
-                        MessageType.LOGIN,
+                        MessageType.CHAT_ROOM_LIST,
                         LocalDateTime.now().toString(),
-                        null),
-                Map.of("userId", userId, "password", password)
+                        sessionId),
+                Collections.emptyMap()
         );
 
         try {
